modified navbar, added border-radius, font sizes, links, text decorations, alignments and fixed errors shown by w3 validator

--- a/style.css
+++ b/style.css
@@ -7,23 +7,66 @@ body {
 .main-header {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    height: 150px;
+    height: 40px;
+    position: relative;
+    bottom: 35px;
+    width: 85%;
 }
 
 .header-grid {
-    border: 1px;
-    background-color: lightgray;
-    padding: 10px;
-    float: left;
-    text-align: center;
-    padding-top: 60px;
-    font-family: sans-serif;
-    font-size: 25px;
-    font-weight: 400px;
+  background-color: lightgray;
+  padding: 10px;
+  float: left;
+  text-align: center;
+  padding-top: 50px;
+  font-family: sans-serif;
+  font-size: 25px;
+  font-weight: 400px;
+}
+
+#topics-header {
+  position: relative;
+  bottom: 150px;
+  left: 1225px;
+  font-size: 25px;
+}
+
+.design-heading {
+  text-decoration: underline;
+  font-size: 35px;
+}
+
+.members1  {
+  color: black;
+  font-size: 45px;
+}
+
+.conf2, .new1 {
+  color: black;
+}
+
+.inspired2 {
+  font-size: 30px;
+  color: black;
+}
+
+.design {
+  font-size: 15px;
+  font-style: italic;
+  position: relative;
+  bottom: 30px;
 }
 
 #topics {
-    border: 2px solid;
+  box-sizing: border-box;
+  width: 140px;
+  height: 10px;
+  border: 2px solid;
+  border-radius: 6px;
+  position: relative;
+  bottom: 115%;
+  left: 520%;
+  z-index: -1;
 }
 
 .articles {
@@ -31,6 +74,7 @@ body {
   grid-template: repeat(2, 1fr) / repeat(50, 1fr);
   width: 100%;
   height: 1200px;
+  padding-top: 110px;
 }
 
 .wrote {
@@ -58,7 +102,7 @@ body {
   grid-area: 2 / 26 / 2 / 51;
 }
 
-.latest {
+.latest1{
   grid-area: 1 / 20 / 1 /32;
   background-color: white;
   z-index: 10;
@@ -101,6 +145,7 @@ body {
   background-color: grey;
   grid-area: 2 / 8 / span 11 / span 12;
   text-align: center;
+  border-radius: 15px;
 }
 
 .Ma h1 {
@@ -115,6 +160,7 @@ body {
   background-color: grey;
   grid-area: 3 / 2 / span 4 / span 5;
   text-align: center;
+  border-radius: 10px;
 }
 
 .articles3 {
@@ -146,6 +192,7 @@ body {
   background-color: grey;
   grid-area: 1 / 8 / span 11 / span 12;
   text-align: center;
+  border-radius: 15px;
 }
 
 .tv h1 {
@@ -238,6 +285,7 @@ body {
 .design_system {
   background-color: grey;
   height: 350px;
+  padding-top: 20px;
 }
 
 .guides {
@@ -267,6 +315,7 @@ body {
 .Na {
   background-color: grey;
   grid-area: 1 / 12 / span 35 / span 18;
+  border-radius: 15px;
 }
 
 .see-all {
